--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,11 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-    <link rel="shortcut icon" type="image/png" href="/iconDeluxe.png">
+    <link rel="icon" type="image/png" href="/iconDeluxe.png">
+    
+    <meta property="og:type" content="website">
+	  <meta property="og:title" content="Uneven Prankster">
+	  <meta property="og:description" content="Game Dev and Content Creator">
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
