--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,9 @@
     <link rel="icon" type="image/png" href="/iconDeluxe.png">
     
     <meta property="og:type" content="website">
-	  <meta property="og:title" content="Uneven Prankster">
-	  <meta property="og:description" content="Game Dev and Content Creator">
+    <meta property="og:title" content="Uneven Prankster">
+    <meta property="og:description" content="Game Dev and Content Creator">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/605879338067558401/605883526381961223/chrome_2019-07-29_19-09-25.png">
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
