--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,12 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-    <link rel="icon" type="image/png" href="iconDeluxe.png">
+    <link rel="icon" type="image/png" href="https://githubprankster.github.io/images/iconDeluxe.png">
     
     <meta property="og:type" content="website">
     <meta property="og:title" content="Uneven Prankster">
     <meta property="og:description" content="Game Dev and Content Creator">
-    <meta property="og:image" content="chrome_2019-07-29_19-09-25.png">
+    <meta property="og:image" content="https://githubprankster.github.io/images/chrome_2019-07-29_19-09-25.png">
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
