--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,5 +1,8 @@
 <ul class="topbar">
 	<a href="/me"><li><u>A</u>bout</li></a>
-	<a href="http://twitter.com/h01000110" target="_blank"><li><u>T</u>witter</li></a>
+	<a href="https://twitter.com/StarPrankster" target="_blank"><li><u>T</u>witter</li></a>
 	<a href="http://soundcloud.com/h01000110" target="_blank"><li><u>S</u>oundcloud</li></a>
+	<a href="https://www.youtube.com/channel/UCns7LWoeawHKZIyMQnq65kQ" target="_blank"><li><u>Y</u>outube</li></a>
+	<a href="https://www.patreon.com/unevenprankster" target="_blank"><li><u>P</u>atreon</li></a>
+	<a href="https://unevenprankster.neocities.org" target="_blank"><li><u>N</u>eocities</li></a>
 </ul>
