--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,11 @@
 	<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
 	<script src="/assets/js/highlight.pack.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
+	
+	<meta property="og:type" content="website">
+    <meta property="og:title" content="Uneven Prankster">
+    <meta property="og:description" content="Gamedev, content creator, and generally weird.">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/605879338067558401/605883526381961223/chrome_2019-07-29_19-09-25.png">
 </head>
 <body>
 	<div class="wrapper">
