--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -5,4 +5,5 @@
 	<a href="https://www.youtube.com/channel/UCns7LWoeawHKZIyMQnq65kQ" target="_blank"><li><u>Y</u>outube</li></a>
 	<a href="https://www.patreon.com/unevenprankster" target="_blank"><li><u>P</u>atreon</li></a>
 	<a href="https://unevenprankster.neocities.org" target="_blank"><li><u>N</u>eocities</li></a>
+	<a href="https://discordapp.com/invite/re2YfaW" target="_blank"><li><u>D</u>iscord</li></a>
 </ul>
