--- a/lover.css
+++ b/lover.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    background-image: url(res/metro_bg.png);
+    background-color: rgb(15,15,15);
     font-family: 'Trebuchet MS';
     font-size: large;
     text-align: center;
